-
Bug
-
Resolution: Done
-
P2: Important
-
5.10.0, 5.11.1
-
None
-
-
048fa7f52cbfee1351e5c2d6420f438fa733106e
To reproduce.
1. Start a compositor with xdgshellv6.
2. Start a client
3. Resize the client by dragging the window decorations
4. Drag inside the window
Expected result: Clicks are forwarded to client
Actual results, window is still being resized.
| For Gerrit Dashboard: QTBUG-70126 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 237638,3 | Compositor: Fix resize grab release for xdg-shell-v6 | 5.11 | qt/qtwayland | Status: MERGED | +2 | 0 |
| 238095,1 | Compositor: Fix resize grab release for xdg-shell-v6 | 5.12 | qt/qtwayland | Status: ABANDONED | 0 | 0 |