Compositor: Fix resize grab release for xdg-shell-v6

The grab was only released for the move state, so if a window was resized, it
would continue to be in the resize state until it was moved.

This makes sure all grabs are released when the mouse is released.

[ChangeLog][Compositor] Fixed a bug where ShellSurfaceItems for
XdgToplevelV6s wouldn't stop resizing.

Task-number: QTBUG-70126
Change-Id: I37d8359dca5f21f2fb52b781a94846a961211a02
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>